Updating the notebook based on feedback from the dry run.

--- a/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
+++ b/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
@@ -274,6 +274,8 @@
    "id": "4639ba36-02ac-4a94-9815-182bbda12c38",
    "metadata": {},
    "source": [
+    "To find more information about the `nemollm` library, please visit the [NeMo LLM documentation](https://llm.ngc.nvidia.com/docs).\n",
+    "\n",
     "### 1.1 - Python Calls to LLM API\n",
     "\n",
     "This section demonstrates executing a call to the NeMo LLM API for cybersecurity knowledge support. This could stand alone as a potential use case where we have a cyber knowledge assistant to aid junior cyber analysts.\n",
@@ -1030,7 +1032,11 @@
     "\n",
     "#### 2.3.1 - Morpheus Overview\n",
     "\n",
-    "NVIDIA Morpheus is an open AI application framework that aids cybersecurity experts in building high performance pipelines for cybersecurity workflows. Morpheus is well suited for building a RAG pipeline due to it's LLM Engine which is specifically designed to aid in integrating LLMs into high throughut and low latency pipelines. A complete guide covering Morpheus is beyond the scope of this notebook but more information can be found in the Morpheus [documentation](https://docs.nvidia.com/morpheus/index.html).\n",
+    "NVIDIA Morpheus is an open AI application framework that aids cybersecurity experts in building high performance pipelines for cybersecurity workflows. Morpheus is well suited for building a RAG pipeline due to it's LLM Engine which is specifically designed to aid in integrating LLMs into high throughut and low latency pipelines. A complete guide covering Morpheus is beyond the scope of this notebook but more information on Morpheus can be found at the following locations:\n",
+    "\n",
+    "- Documentation: https://docs.nvidia.com/morpheus/index.html\n",
+    "- Github Repo: https://github.com/nv-morpheus/Morpheus\n",
+    "- Morpheus Examples: https://github.com/nv-morpheus/Morpheus/tree/branch-24.03/examples\n",
     "\n",
     "To start building a Morpheus pipeline, the first step is always to create a configuration object. The configuration object controls global options for the pipeline such as batch size, number of threads, logging and more. For our needs, we can use the default values and only need to create the object which we will be passing to each pipeline.\n"
    ]
@@ -1393,7 +1399,7 @@
    "source": [
     "#### 2.4.4 - Hitting the Limits of the LLMs\n",
     "\n",
-    "This section will go over some of the areas where LLMs may fail.\n"
+    "While LLMs can work well for many tasks, they are not perfect. They can fail on seemingly simple tasks, get into a loop, or not follow the output formatting correctly. These edge cases can be hard to catch and can be difficult to debug. For example, if we use the below prompt about Log4j, what happens when we run the pipeline?\n"
    ]
   },
   {
@@ -1405,7 +1411,17 @@
    },
    "outputs": [],
    "source": [
-    "# Example to cause the LLM to fail (TBD)"
+    "cve_details=\"\"\"\n",
+    "Apache Log4j2 2.0-beta9 through 2.15.0 (excluding security releases 2.12.2, 2.12.3, and 2.3.1) JNDI features used in\n",
+    "configuration, log messages, and parameters do not protect against attacker controlled LDAP and other JNDI related endpoints. An attacker\n",
+    "who can control log messages or log message parameters can execute arbitrary code loaded from LDAP servers when message lookup substitution\n",
+    "is enabled. From log4j 2.15.0, this behavior has been disabled by default. From version 2.16.0 (along with 2.12.2, 2.12.3, and 2.3.1), this\n",
+    "functionality has been completely removed. Note that this vulnerability is specific to log4j-core and does not affect log4net, log4cxx, or\n",
+    "other Apache Logging Services projects.\n",
+    "\"\"\"\n",
+    "\n",
+    "# Now run the pipeline with a specified CVE description\n",
+    "await run_cve_pipeline(pipeline_config, engine_config, [cve_details])"
    ]
   },
   {
@@ -1413,6 +1429,22 @@
    "id": "9e8c30da",
    "metadata": {},
    "source": [
+    "You should see the following in the output:\n",
+    "\n",
+    "```\n",
+    "  \"checklist\":{\n",
+    "    \"0\":[\n",
+    "      1,\n",
+    "      2,\n",
+    "      3,\n",
+    "      4,\n",
+    "      5\n",
+    "    ]\n",
+    "  },\n",
+    "```\n",
+    "\n",
+    "This particular prompt seems to break the checklist LLM query because the checklist doesn't container any questions, only numbers. This is a good example of how LLMs can fail on seemingly simple tasks and how difficult it can be to debug these issues. The pipeline still runs to completion, but the output is meaningless. In the next section, we will discuss how we can improve the model to handle these edge cases more gracefully.\n",
+    "\n",
     "<div class=\"alert alert-block alert-warning\">\n",
     "<b>Note:</b> Please wait here until instructed to continue with running the notebook.\n",
     "</div>\n",
@@ -1432,11 +1464,7 @@
     "\n",
     "### 3.1 - Improving the Model\n",
     "\n",
-    "Although few-shot learning can be effective for many use cases, there are situations where enhancing certain aspects of the model's output or providing a broader range of examples is desirable.\n",
-    "\n",
-    "While augmenting the prompt with more examples can further refine the model, there comes a point where the extended prompt becomes cumbersome, leading to longer processing times and higher costs due to increased token usage in each query.\n",
-    "\n",
-    "A practical alternative is to compile your examples into a dataset and fine-tune the base model to achieve improved performance on a targeted task.\n"
+    "Although few-shot learning can be effective for many use cases, there are situations where enhancing certain aspects of the model's output or providing a broader range of examples is desirable. While augmenting the prompt with more examples can further refine the model, there comes a point where the extended prompt becomes cumbersome, leading to longer processing times and higher costs due to increased token usage in each query. A practical alternative is to compile your examples into a dataset and fine-tune the base model to achieve improved performance on a targeted task.\n"
    ]
   },
   {
@@ -1444,7 +1472,9 @@
    "id": "b9dcc38b-8ebb-4cf6-aa30-380fd16ee178",
    "metadata": {},
    "source": [
-    "#### 3.1.1 - Log4j Example\n"
+    "#### 3.1.1 - Log4j Example\n",
+    "\n",
+    "Let's revisit the Log4j example from the previous section. We will use the same prompt as before, but we will use the few-shot prompt and see if it does any better.\n"
    ]
   },
   {
@@ -1496,92 +1526,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "554962c5-0efd-445f-b321-2853f027cf9c",
+   "id": "8a63d4c9",
    "metadata": {},
    "source": [
-    "In the example above, the model utilizing a **few-shot learning** prompt effectively **identifies the basic checks**, similar to what's shown in the in-context examples. However, it **doesn't include checks related to the vulnerable configurations** (message lookup substitution) and the **usage of vulnerable feature** (JNDI).\n",
+    "The prompt above should have generated a checklist item that looked like:\n",
     "\n",
-    "Instead of incorporating this Log4j CVE as an **additional example** in the prompt, a more effective strategy would be to create a **fine-tuning dataset** that includes this scenario. This dataset can then be used to fine-tune the model, aligning its performance more closely with our expectations.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4a61a762-3219-4b2b-aedf-836ce1a7f2f1",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "#### 3.1.2 - Fine-Tuning Dataset\n",
-    "\n",
-    "The fine-tuning dataset would need you to build out your ideal output to train the model towards:\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9ebad28c-b991-4705-809c-d908e7f134f1",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Target checklists\n",
-    "PYARROW_CHECKLIST = \"\"\"[\n",
-    "    \"Check for PyArrow: Verify if your project uses the PyArrow library, which is the affected package. If PyArrow is not a dependency in your project, then your code is not vulnerable to this CVE.\",\n",
-    "    \"Review Affected Versions: If PyArrow is used, check the version of PyArrow that your project depends on. According to the vulnerability details, versions from 0.14.0 to 14.0.0 are affected by this vulnerability.\",\n",
-    "    \"Check for pyarrow-hotfix: Verify if your project already contains the pyarrow-hotfix package made to remediate this CVE.\"\n",
-    "]\"\"\"\n",
-    "LOG4J_CHECKLIST = \"\"\"[\n",
+    "```\n",
+    " [\n",
     "    \"Check for log4j: Verify if your project uses the log4j library, which is the affected package. If log4j is not a dependency in your project, then your code is not vulnerable to this CVE.\",\n",
-    "    \"Check for log4j-core: Specifically check for usage of log4j-core library, as this vulnerability is specific to log4j-core and does not affect other Apache Logging Services projects such as log4net or log4cxx.\",\n",
-    "    \"Review Affected Versions: If log4j-core is used, check the log4j version that your project depends on. According to the vulnerability details, versions from 2.0.1 up to (excluding) 2.3.1, from 2.4.0 up to (excluding) 2.12.2, and from 2.13.0 up to (excluding) 2.15.0 are affected by this vulnerability.\",\n",
-    "    \"Review Code for Usage of Vulnerable Features: Check if JNDI features are used in configuration, log messages, or parameters within your code base. If so, ensure that attacker-controlled inputs are not used to load arbitrary code from LDAP servers.\",\n",
-    "    \"Check for Vulnerable Configuration: If JNDI features are used, ensure that message lookup substitution is not enabled, as enabling it could allow an attacker to execute arbitrary code loaded from LDAP servers through controlled log messages or log message parameters.\"\n",
-    "]\"\"\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3c997d7c-b10c-460d-854d-b236a033692d",
-   "metadata": {},
-   "source": [
-    "Datasets required for fine-tuning have examples with just two fields- `Prompt` and `Completion`\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e2c3ba22-2638-4fda-b26b-0be27fe02570",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "my_examples = [(PYARROW_CVE_INTEL, PYARROW_CHECKLIST), (LOG4J_CVE_INTEL, LOG4J_CHECKLIST)]  # and potentially many more\n",
-    "data = []\n",
-    "for cve_intel, target_checklist in my_examples:\n",
-    "    formatted_prompt = few_shot_prompt_template.format(**LOG4J_CVE_INTEL)\n",
-    "    completion = target_checklist\n",
-    "    data.append({\n",
-    "        \"prompt\": formatted_prompt,\n",
-    "        \"completion\": completion,\n",
-    "    })\n",
+    "    \"Review Affected Versions: If log4j is used, check the version that your project depends on. According to the vulnerability details, versions from 2.0.1 up to (excluding) 2.3.1, from 2.4.0 up to (excluding) 2.12.2, from 2.13.0 up to (excluding) 2.15.0 are affected by this vulnerability.\",\n",
+    "    \"Review Code To Check for Vulnerability Mitigation: Check if the 'log4j-core' library is not used in your project. If it is used, check if the 'log4j-core' library is updated to the latest version (2.16.0) or a version with the vulnerability mitigation (2.12.2, 2.12.3, and 2.3.1). Also, check if the 'log4j-core' library is not used in any other project that you depend on. If it is used, check if the 'log4j-core' library is updated to the latest version (2.16.0) or a version with the vulnerability mitigation (2.12.2, 2.12.3, and 2.3.1). Also, check if the 'log4j-core' library is not used in any other project that you depend on. If it is used, check if the 'log4j-core' library is updated to the latest version (2.16.0) or a version with the vulnerability mitigation (2.12.2, 2.12.3, and 2.3.1). Also, check if the 'log4j-core' library is not used in any other project that you depend on. If it is used, check if the 'log4j-core' library is updated to the latest version (2.16.0) or a version with the vulnerability mitigation (2.12.2, 2.12.3, and 2.3.1). Also, check if the 'log4j-core' library is not used in any other\n",
+    "```\n",
     "\n",
-    "# # Next step would be to save this dataset out into a jsonl file\n",
-    "# file_path = './my_fine_tune_dataset.jsonl'\n",
-    "\n",
-    "# with open(file_path, 'w') as file:\n",
-    "#     for record in data:\n",
-    "#         json_record = json.dumps(record)\n",
-    "#         file.write(f\"{json_record}\\n\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "29c05400-f63d-419f-8b4a-af8e11c5d055",
-   "metadata": {},
-   "source": [
-    "Now we can fine-tune the model with this dataset using Nemo and swap it into our pipeline by just adding a `customization_id`\n"
+    "Just like before, this particular prompt seems to have broken the checklist LLM query because the the LLM gets caught up in a loop and repeats itself until it hits the max number of tokens to generate. If we used this in the pipeline it would surely fail since it it not a valid python list. What can be done in this situation to improve the model if we are already using few-shot learning?\n"
    ]
   },
   {
@@ -1591,9 +1548,11 @@
     "tags": []
    },
    "source": [
-    "#### 3.1.3 - Fine-tuned Model\n",
+    "#### 3.1.2 - Fine-tuned Model\n",
     "\n",
-    "The following cell demonstrates the call to a fine-tuned model and its output for the Log4j CVE:\n"
+    "Fine tuning is a great way to improve the performance of a model on a specific task. By providing the model with a dataset of examples, it can learn to generate better outputs for that task. In NeMo, a fine-tuning dataset provides examples of the desired input and output for the model. The model is then trained to generate the correct output for the given input. This can be used to improve the performance of the model on a specific task, such as generating a checklist item for a given query.\n",
+    "\n",
+    "Performing fine-tuning is beyond the scope of this notebook, but we can still demonstrate its effects when done properly. We have already fine-tuned a model on the task of generating checklist items for a given query. We will use this fine-tuned model to generate a checklist item for the same query as before and see if it does any better. To use the new model, we only need to add the customization ID to our query and run the generate function as before.\n"
    ]
   },
   {
@@ -1610,13 +1569,21 @@
     "model_output = conn.generate(\n",
     "    prompt=formatted_prompt,\n",
     "    model=\"gpt-43b-002-lora\",\n",
-    "    # customization_id=\"96d79918-f5a8-47c0-8b0e-b87295e51b64\",  # PLACEHOLDER\n",
+    "    customization_id=\"b3a07dec-c0ea-4e09-b9bf-f45a8e66f746\",\n",
     "    tokens_to_generate=800,\n",
     "    temperature=0.001,\n",
     "    return_type=\"text\",\n",
     ")\n",
     "\n",
     "print(model_output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e3de066",
+   "metadata": {},
+   "source": [
+    "This time, the model the model produces a complete and accurate checklist. This is a good example of how fine-tuning can improve the performance of a model on a specific task. Let's see how we can use this fine-tuned model in our pipeline. To use this model in our pipeline, we need to make a copy of the engine configureation from before and add the customization ID. Then we can run the pipeline with the new configuration and see if it does any better.\n"
    ]
   },
   {
@@ -1632,7 +1599,8 @@
     "engine_config_custom_model = engine_config.model_copy(deep=True)\n",
     "\n",
     "# Set the customization ID\n",
-    "# engine_config_custom_model.checklist.model.customization_id = \"<CUSTOMIZATION_ID>\"\n",
+    "engine_config_custom_model.checklist.model.model_name = \"gpt-43b-002-lora\"\n",
+    "engine_config_custom_model.checklist.model.customization_id = \"b3a07dec-c0ea-4e09-b9bf-f45a8e66f746\"\n",
     "\n",
     "# Run the pipeline\n",
     "await run_cve_pipeline(pipeline_config, engine_config_custom_model, [\n",
@@ -1924,12 +1892,6 @@
     "      ![Terminal and Notebook Side by Side](./images/side_by_side.png)\n",
     "5. To stop the microservice, interrupt the kernel by pressing the stop button in the toolbar\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fbe6e684",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
