add exercise cells

--- a/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
+++ b/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
@@ -336,14 +336,15 @@
    },
    "outputs": [],
    "source": [
-    "print(\n",
-    "    conn.generate(\n",
-    "        prompt=\"How can one determine if a CVE is vulnerable in a specific environment?\",\n",
-    "        model=\"llama-2-70b-hf\",\n",
-    "        tokens_to_generate=128,\n",
-    "        temperature=0,\n",
-    "        return_type=\"text\",\n",
-    "    ))"
+    "# # UNCOMMENT to try different models\n",
+    "# print(\n",
+    "#     conn.generate(\n",
+    "#         prompt=\"How can one determine if a CVE is vulnerable in a specific environment?\",\n",
+    "#         model=\"llama-2-70b-hf\",\n",
+    "#         tokens_to_generate=128,\n",
+    "#         temperature=0,\n",
+    "#         return_type=\"text\",\n",
+    "#     ))"
    ]
   },
   {
@@ -353,11 +354,46 @@
    "source": [
     "#### 1.1.2 - Explore On Your Own: Model Parameters\n",
     "\n",
-    "How do the different models compare? Can you change the parameters (like `temperature` or `repetition_penalty`) to help the smaller models improve?\n",
+    "- How do the different models compare? Can you change the parameters (like `temperature` or `repetition_penalty`) to help the smaller models improve?\n",
     "\n",
-    "What are some other cybersecurity questions you could ask an LLM to upskill a junior analyst?\n",
+    "- What are some other cybersecurity questions you could ask an LLM to upskill a junior analyst?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ec13bd8-e835-4260-8b09-f419513610e3",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "Try a few `temperature` values such as `[0.0, 0.5, 0.7, 0.9]`, and a higher value of `top_k` such as `[2, 10, 30]` (ideally below 64) to make the model more creative with its responses. Higher values of `top_k` enable the model to sample from a bigger set of probable tokens. (If `top_k=1`, greedy sampling is used.)\n",
     "\n",
-    "---\n"
+    "What happens to the model's output with higher creativity?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fec55c66-1b44-44a2-a69d-c899c08f4ccf",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# # UNCOMMENT to try different parameters\n",
+    "# # Analyze output of the model for different value of temperature and top_k\n",
+    "# for temp in [0.0, 0.5, 0.7, 0.9]:\n",
+    "#     print(\n",
+    "#         conn.generate(\n",
+    "#             prompt=\"How can one determine if a CVE is vulnerable in a specific environment?\",\n",
+    "#             model=\"gpt-43b-002\",\n",
+    "#             tokens_to_generate=100,\n",
+    "#             temperature=temp,\n",
+    "#             return_type=\"text\",\n",
+    "#             top_k=10  # try different values here too\n",
+    "#         )\n",
+    "#     )\n",
+    "#     print(\"----\")"
    ]
   },
   {
@@ -367,6 +403,8 @@
     "tags": []
    },
    "source": [
+    "---\n",
+    "\n",
     "### 1.2 - Prompt Engineering\n",
     "\n",
     "Sometimes, a simple prompt might not deliver the results we're aiming for. That's where prompt engineering steps in.<br>\n",
@@ -392,11 +430,13 @@
    },
    "outputs": [],
    "source": [
-    "formatted_prompt = \"{persona} {query}\".format(\n",
-    "    persona=\n",
+    "security_expert_persona = (\n",
     "    \"You are a highly experienced and knowledgeable cybersecurity expert with a deep understanding of cyber threats, \"\n",
     "    \"network defense strategies, and the latest in cybersecurity technology. Your communication is clear, concise, and authoritative, \"\n",
-    "    \"aiming to educate and inform on best practices for digital security.\",\n",
+    "    \"aiming to educate and inform on best practices for digital security.\"\n",
+    ")\n",
+    "formatted_prompt = \"{persona} {query}\".format(\n",
+    "    persona=security_expert_persona,\n",
     "    query=\"How can one determine if a CVE is vulnerable in a specific environment?\")\n",
     "\n",
     "print(\n",
@@ -425,11 +465,32 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c485395e-38b7-4c63-ad62-7dcacd5b9757",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4f6ebc5-a1ff-4e27-8083-8f9757fcb6ee",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
-    "---\n"
+    "# # UNCOMMENT to try a different persona\n",
+    "# # Here is an example:\n",
+    "# persona = \"You are an elementary school teacher who teaches digital security.\",\n",
+    "# formatted_prompt = \"{persona} {query}\".format(\n",
+    "#     persona=persona,\n",
+    "#     query=\"How can one determine if a CVE is vulnerable in a specific environment?\")\n",
+    "\n",
+    "# print(\n",
+    "#     conn.generate(\n",
+    "#         prompt=formatted_prompt,\n",
+    "#         model=\"gpt-43b-002\",\n",
+    "#         tokens_to_generate=500,\n",
+    "#         temperature=0,\n",
+    "#         top_k=1,\n",
+    "#         top_p=0.9,\n",
+    "#         random_seed=0,\n",
+    "#         return_type=\"text\",\n",
+    "#     ))"
    ]
   },
   {
@@ -439,6 +500,7 @@
     "tags": []
    },
    "source": [
+    "---\n",
     "### 1.3 - Prompt Templating\n",
     "\n",
     "While cyber knowledge assistants are valuable, there are occasions when we need more **detailed information** or support on particular subjects, such as specific **malware** or a **security vulnerability** we're examining.<br>\n",
@@ -568,7 +630,7 @@
    "source": [
     "#### 1.3.2 - Explore On Your Own: Different Models\n",
     "\n",
-    "How do alternative models perform? Do any adhere more closely to the formatting instructions?\n"
+    "How do alternative models perform? Do any adhere more closely to the formatting instructions?"
    ]
   },
   {
@@ -580,17 +642,18 @@
    },
    "outputs": [],
    "source": [
-    "models_to_try = ['gpt5b', 'gpt-8b-000', 'gpt20b', 'gpt-43b-002', 'llama-2-70b-hf']\n",
+    "# # UNCOMMENT to try different models\n",
+    "# models_to_try = ['gpt5b', 'gpt-8b-000', 'gpt20b', 'gpt-43b-002', 'llama-2-70b-hf']\n",
     "\n",
-    "for model in models_to_try:\n",
-    "    model_output = conn.generate(\n",
-    "        prompt=formatted_prompt,\n",
-    "        model=model,\n",
-    "        tokens_to_generate=256,\n",
-    "        temperature=0,\n",
-    "        return_type=\"text\",\n",
-    "    )\n",
-    "    print(f\"Model: {model}\\n{model_output}\\n\\n\")"
+    "# for model in models_to_try:\n",
+    "#     model_output = conn.generate(\n",
+    "#         prompt=formatted_prompt,\n",
+    "#         model=model,\n",
+    "#         tokens_to_generate=256,\n",
+    "#         temperature=0,\n",
+    "#         return_type=\"text\",\n",
+    "#     )\n",
+    "#     print(f\"Model: {model}\\n{model_output}\\n\\n\")"
    ]
   },
   {
@@ -748,16 +811,16 @@
    },
    "outputs": [],
    "source": [
-    "one_shot_template = \"\"\"Using the example as a guide, parse the checklist's contents into a python list. \\\n",
-    "Example Checklist: \\\n",
-    "- Check for notable vulnerable software vendors \\\n",
-    "- Consider the network exposure of your Docker container \\\n",
+    "one_shot_template = \"\"\"Using the example as a guide, parse the checklist's contents into a python list.\n",
+    "Example Checklist:\n",
+    "- Check for notable vulnerable software vendors\n",
+    "- Consider the network exposure of your Docker container\n",
     "\n",
-    "Python List: \\\n",
+    "Python List:\n",
     "[\n",
-    "\"Check for notable vulnerable software vendors\", \\\n",
+    "\"Check for notable vulnerable software vendors\",\n",
     "\"Consider the network exposure of your Docker container\"\n",
-    "] \\\n",
+    "]\n",
     "\n",
     "Checklist:\n",
     "{{checklist}}\n",
@@ -766,14 +829,26 @@
     "\n",
     "formatted_prompt = one_shot_template.format(checklist=unparsable_list)\n",
     "\n",
-    "is_properly_formatted_list(\n",
-    "    conn.generate(\n",
-    "        prompt=formatted_prompt,\n",
-    "        model=\"gpt-43b-002\",\n",
-    "        tokens_to_generate=256,\n",
-    "        temperature=0,\n",
-    "        return_type=\"text\",\n",
-    "    ))"
+    "model_output = conn.generate(\n",
+    "    prompt=formatted_prompt,\n",
+    "    model=\"gpt-43b-002\",\n",
+    "    tokens_to_generate=256,\n",
+    "    temperature=0,\n",
+    "    return_type=\"text\",\n",
+    ")\n",
+    "print(model_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6299d06-e278-4372-8100-7d5f111c59cd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "is_properly_formatted_list(model_output)"
    ]
   },
   {
@@ -781,12 +856,20 @@
    "id": "1fa97813-b21c-4445-8f8a-b99a03e03267",
    "metadata": {},
    "source": [
-    "#### 1.4.1 Explore on your own - Robustness\n",
+    "#### 1.4.1 - Explore on your own: Robustness\n",
     "\n",
-    "How robust is the one-shot example?\n",
+    "- How robust is the one-shot example?\n",
     "\n",
-    "Is it effective when the unparsable list is enumerated or bulleted instead of using dashes?\n"
+    "- Is it effective when the unparsable list is enumerated or bulleted instead of using dashes?\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "570d2da8-b30b-47e7-895e-0f9fde2acb08",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -917,15 +1000,82 @@
     "tags": []
    },
    "source": [
-    "#### 1.5.1 _Explore on your own_\n",
+    "#### 1.5.1 - Explore on your own\n",
+    "- What feedback could an expert cyber analyst give you about this output?\n",
     "\n",
-    "##### How many examples do you think could fit in a prompt before the context is too large for the model?\n",
     "\n",
-    "##### What happens when you input a tasklist or checklist item as a query to the model?\n",
+    "- What happens when you take a checklist item from what the model generated above and ask the model about it?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8fcbfb2-e3ca-424c-9575-db61be58bb72",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# # UNCOMMENT to try it out\n",
+    "# example_checklist_item = (\n",
+    "#     \"Check for PyArrow: Verify if your project uses the PyArrow library, which is the affected package. \"\n",
+    "#     \"If PyArrow is not a dependency in your project, then your code is not vulnerable to this CVE.\"\n",
+    "# )\n",
+    "# print(\n",
+    "#     conn.generate(\n",
+    "#         prompt=example_checklist_item,\n",
+    "#         model=\"gpt-43b-002\",\n",
+    "#         tokens_to_generate=256,\n",
+    "#         temperature=0,\n",
+    "#         return_type=\"text\",\n",
+    "#     ))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14d4d912-a7b0-4def-b823-0512beb770c7",
+   "metadata": {},
+   "source": [
+    "- How many examples do you think could fit in a prompt before the context is too large for the model?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f0b6274-95da-47d4-b1f9-fa30a87bd339",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# # UNCOMMENT to try it out\n",
+    "# # Let's try repeating the first example 7 times\n",
+    "# example_one_start_index = 626 \n",
+    "# example_one_end_index = 2527\n",
     "\n",
-    "##### What feedback could an expert cyber analyst give you about this output?\n",
+    "# def repeat_substring(main_str, substring_start_index, substring_end_index, n):\n",
+    "#     # Divide the main_str into before and after parts\n",
+    "#     sub_str = main_str[substring_start_index:substring_end_index]\n",
+    "#     before_part = main_str[:substring_start_index]\n",
+    "#     after_part = main_str[substring_end_index:]\n",
+    "    \n",
+    "#     # Repeat sub_str n times\n",
+    "#     repeated_sub_str = sub_str * n\n",
+    "    \n",
+    "#     # Concatenate before part, repeated sub_str, and after part\n",
+    "#     result = before_part + repeated_sub_str + after_part\n",
+    "#     return result\n",
     "\n",
-    "---\n"
+    "# updated_prompt = repeat_substring(few_shot_prompt_template, example_one_start_index, example_one_end_index, 7)\n",
+    "\n",
+    "# model_output = conn.generate(\n",
+    "#     prompt=updated_prompt,\n",
+    "#     model=\"gpt-43b-002\",\n",
+    "#     tokens_to_generate=256,\n",
+    "#     temperature=0,\n",
+    "#     return_type=\"text\",\n",
+    "# )\n",
+    "# print(model_output)"
    ]
   },
   {
@@ -935,6 +1085,7 @@
     "tags": []
    },
    "source": [
+    "---\n",
     "### 1.6 - Evaluation Strategies\n"
    ]
   },
