--- a/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
+++ b/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
@@ -768,11 +768,9 @@
    },
    "outputs": [],
    "source": [
-    "unparsable_list = \"\"\" - Check if the containerized environment uses PyArrow 0.14.0 through 14.0.1. \\\n",
-    "- Check if the containerized environment reads Arrow IPC, Feather, or Parquet data from untrusted sources. \\\n",
-    "- Check if the containerized environment upgrades to PyArrow 14.0.1. \\\n",
-    "- Check if the containerized environment downgrades to PyArrow 14.0.1 or later. \\\n",
-    "- Check if the containerized environment uses the pyarrow-hotfix package to disable the vulnerability.\"\"\""
+    "unparsable_list = \"\"\"- Check if the vulnerable package, PyArrow, is installed in the container.\n",
+    "- If the vulnerable package is installed, check the version of the package. If it is before 14.0.1, the vulnerability is present.\n",
+    "- Check if the container has any exposed IPC or Parquet readers.\"\"\""
    ]
   },
   {
@@ -792,18 +790,32 @@
    },
    "outputs": [],
    "source": [
-    "zero_shot_template = \"Parse the following checklist's contents into a python list. {checklist}\"\n",
+    "zero_shot_template = \"\"\"Parse the following checklist's contents into a python list.\n",
+    "Checklist: \n",
+    "{checklist}\"\"\"\n",
     "\n",
     "formatted_prompt = zero_shot_template.format(checklist=unparsable_list)\n",
     "\n",
-    "is_properly_formatted_list(\n",
-    "    conn.generate(\n",
-    "        prompt=formatted_prompt,\n",
-    "        model=\"gpt-43b-002\",\n",
-    "        tokens_to_generate=256,\n",
-    "        temperature=0,\n",
-    "        return_type=\"text\",\n",
-    "    ))"
+    "model_output = conn.generate(\n",
+    "    prompt=formatted_prompt,\n",
+    "    model=\"gpt-43b-002\",\n",
+    "    tokens_to_generate=256,\n",
+    "    temperature=0,\n",
+    "    return_type=\"text\",\n",
+    ")\n",
+    "print(model_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3872ee0-cbb1-42b7-8194-c457ee606ff5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "is_properly_formatted_list(model_output)"
    ]
   },
   {
@@ -823,21 +835,18 @@
    },
    "outputs": [],
    "source": [
-    "one_shot_template = \"\"\"Using the example as a guide, parse the checklist's contents into a python list.\n",
+    "one_shot_template = \"\"\"Using the example as a guide, parse the checklist's contents into a python list. \n",
     "Example Checklist:\n",
     "- Check for notable vulnerable software vendors\n",
     "- Consider the network exposure of your Docker container\n",
     "\n",
-    "Python List:\n",
-    "[\n",
-    "\"Check for notable vulnerable software vendors\",\n",
-    "\"Consider the network exposure of your Docker container\"\n",
-    "]\n",
+    "Example Output:\n",
+    "[\"Check for notable vulnerable software vendors\", \"Consider the network exposure of your Docker container\"]\n",
     "\n",
-    "Checklist:\n",
-    "{{checklist}}\n",
+    "Given Checklist:\n",
+    "{checklist}\n",
     "\n",
-    "Python List: \"\"\"\n",
+    "Outpur Python List: \"\"\"\n",
     "\n",
     "formatted_prompt = one_shot_template.format(checklist=unparsable_list)\n",
     "\n",
@@ -879,9 +888,27 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "570d2da8-b30b-47e7-895e-0f9fde2acb08",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# # UNCOMMENT to try with an enumerated list\n",
+    "# enumerated_list = \"\"\"1. Check if the vulnerable package, PyArrow, is installed in the container.\n",
+    "# 2. If the vulnerable package is installed, check the version of the package. If it is before 14.0.1, the vulnerability is present.\n",
+    "# 3. Check if the container has any exposed IPC or Parquet readers.\"\"\"\n",
+    "\n",
+    "# formatted_prompt = one_shot_template.format(checklist=unparsable_list)\n",
+    "\n",
+    "# model_output = conn.generate(\n",
+    "#     prompt=formatted_prompt,\n",
+    "#     model=\"gpt-43b-002\",\n",
+    "#     tokens_to_generate=256,\n",
+    "#     temperature=0,\n",
+    "#     return_type=\"text\",\n",
+    "# )\n",
+    "# print(model_output)"
+   ]
   },
   {
    "cell_type": "markdown",
