--- a/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
+++ b/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
@@ -846,7 +846,7 @@
     "Given Checklist:\n",
     "{checklist}\n",
     "\n",
-    "Outpur Python List: \"\"\"\n",
+    "Output Python List: \"\"\"\n",
     "\n",
     "formatted_prompt = one_shot_template.format(checklist=unparsable_list)\n",
     "\n",
